[package]
name = "crunchert-storage"
version = "0.1.1"
edition = "2021"
authors = ["Isaac <isaacwolfsite@gmail.com>"]
description = "Storage mechanism for the WIP CruncheRT timeseries DB."
readme = "README.md"
repository = "https://github.com/WolfEYc/crunchert-storage"
license = "Apache-2.0"
keywords = ["crunchert", "timeseries", "tsdb"]
categories = ["database", "database-implementations"]

[dependencies]
chrono = "0.4.38"
dashmap = { version = "6.1.0", features = ["inline"] }
itertools = "0.13.0"
memmap2 = "0.9.5"
pco = "0.3.1"
postcard = "1.0.10"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full", "tracing"] }
